<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Team Accuspeech</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="notification_title">Currently recording</string>
    <string name="notification_message">Tap here for record controls.</string>
    <string name="ticker_text">Recording has started</string>
    <string name="agc_box_title">Automatic Gain Control</string>
    <string name="agc_box_desc">Having this on gives a constant output despite a wide variety of input levels."\n\n"This needs to be set prior to recording.</string>
    <string name="audio_settings">Audio Settings</string>
    <string name="equalizer_title">Equalizer</string>
    <string name="equalizer_box_desc">Alters the levels of different frequencies on playback."\n\n"You can change this setting prior to playing back a recording.</string>
    <string name="new_recording">New Recording</string>
    <string name="past_recordings">Past Recordings</string>
    <string name="start_recording">Start"\n"Recording</string>
    <string name="stop_recording">Stop"\n"Recording</string>
    <string name="zero_time">0:00</string>
    <string name="bass_boost_title">Bass Boost</string>
    <string name="bass_boost_box_desc">Amplifies low frequencies of sound on playback."\n\n"You can change this setting prior to playing back a recording.</string>
    <string name="decibel_meter_title">Decibel Meter</string>
    <string name="decibel_meter_box_desc">Measures the sound pressure level.</string>
    <string name="feature_not_supported">Not supported on this device.</string>
    <string name="no_recordings">There are no past recordings.</string>
    <string name="noise_suppression_box_title">Noise Suppression</string>
    <string name="noise_suppression_box_desc">Helps remove background noise."\n\n"This needs to be set prior to recording.</string>
    <string name="save_recording">Set Recording Name</string>
    <string name="save_recording_button">Save</string>
    <string name="cancel_button">Cancel</string>
    <string name="delete_button">Delete</string>
    <string name="cannot_rename_empty">Cannot have a blank name</string>
    <string name="delete_verification">Are you sure?</string>
    <string name="delete_message">This will permanently delete this recording</string>
    <string name="decibel_meter_off">Currently off</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="audio_in_use">Mic currently in use</string>
    <string name="saving_file">Saving audio file...</string>
    <string name="warning">WARNING!</string>
    <string name="ok">OK</string>
    <string name="version_warning">This app is not compatible with the version of Android you have."\n\n"You will be unable to use this app to playback your recordings.</string>
    <string name="sorry">Sorry!</string>
    <string name="unable_to_play">You are unable to playback your recordings in this media player."\n\n"You can access your recordings directly from your SD card.</string>
</resources>
