<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/container"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="#FFFFFF"
    android:layout_margin="20dp">
    <TextView
        style="@style/BoxTitle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/warning"/>
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        style="@style/BoxText"
        android:text="@string/version_warning"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="right">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok"
            android:onClick="ok"/>
    </LinearLayout>
</LinearLayout>
