<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout android:id="@+id/buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_margin="5dp">
        <Button
            android:text="@string/audio_settings"
            android:onClick="audioSettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
        <Button
            android:text="@string/past_recordings"
            android:onClick="pastRecordings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
    </LinearLayout>
    <View
        android:id="@+id/linebreak"
        android:layout_above="@id/buttons"
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:background="#000000"
        />

    <TextView
        android:id="@+id/activityTitle"
        android:text="@string/new_recording"
        style="@style/ActivityTitle"
        android:layout_alignParentTop="true" />
        <LinearLayout android:id="@+id/container"
            style="@style/Box"
            android:layout_below="@id/activityTitle"
            android:layout_above="@id/linebreak">
            <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                style="@style/Box"
                android:orientation="vertical" android:layout_width="match_parent"
                android:layout_height="match_parent">
                <Button
                    style="@style/BoxTitle"
                    android:textSize="30dp"
                    android:layout_centerHorizontal="true"
                    android:id="@+id/recordButton"
                    android:onClick="onRecord"
                    android:background="@drawable/red_button"
                    android:text="@string/start_recording"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/recordTimerText"
                    style="@style/ActivityTitle"
                    android:layout_below="@id/recordButton"
                    android:text="@string/zero_time"
                    android:layout_centerHorizontal="true"/>
            </RelativeLayout>
        </LinearLayout>
</RelativeLayout>
